2007-01-26  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-callbacks.c: (move_to_trash_cb): Fix bug #395381,
	cannot delete filenames containing %21 from the search window.

2007-01-26  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-callbacks.c: (move_to_trash_cb): Fix bug #397945,
	cursor goes away from found files list when deleting a file.

2006-11-19  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-support.c: fix compiler warning
	* gsearchtool.c: (main): gtk_window_set_policy() is deprecated,
	use gtk_window_set_resizable()

2006-11-04  Dennis Cranston  <dennis_cranston@yahoo.com>

	* help/C/gnome-search-tool.xml: Fix documentation error.

2006-10-08  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-callbacks.c: (file_key_press_event_cb): 
	Fix bug #360395, numpad enter doesn't work.

2006-09-12  Dennis Cranston <dennis_cranston@yahoo.com>

	* help/C/figures/gnome-search-tool_window.png:  Update.
	
2006-09-09  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-spinner.[ch]: Update to latest spinner code.
	* gsearchtool.c: (gsearch_app_create): Update for spinner code.

2006-06-15  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool-callbacks.c: (open_file_cb), (open_folder_cb),
	(move_to_trash_cb), (file_button_release_event_cb),
	(drag_begin_file_cb), (drag_file_cb), (key_press_cb):  
	Fix "dereferencing type-punned pointer will break 
	strict-aliasing rules" compile warnings.  Add call to 
	g_list_foreach (list, gtk_tree_path_free, NULL) to free 
	lists returned by gtk_tree_selection_get_selected_rows().

2006-06-15  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gnome-search-tool.1,
	* gsearchtool-callbacks.c,
	* gsearchtool-callbacks.h,
	* gsearchtool-spinner.c,
	* gsearchtool-support.c,
	* gsearchtool-support.h,
	* gsearchtool.c,
	* gsearchtool.h: git-stripspace - Filter out empty lines

2006-05-12  Dennis Cranston  <dennis_cranston@yahoo.com>
